[gd_scene load_steps=46 format=2]

[ext_resource path="res://Sprites/gameI/but1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/gameI/but3.png" type="Texture" id=2]
[ext_resource path="res://Sprites/gameI/but2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/gameI/but4.png" type="Texture" id=4]
[ext_resource path="res://Scripts/GameI/Game1main.gd" type="Script" id=5]
[ext_resource path="res://Scripts/GameI/PlayerButs.gd" type="Script" id=6]
[ext_resource path="res://Scripts/GameI/PreStart.gd" type="Script" id=7]
[ext_resource path="res://Sprites/gameI/RulesBG.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Raw/SmallPixel.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Sprites/gameI/RulesCount2.png" type="Texture" id=11]
[ext_resource path="res://Sprites/gameI/RulesCount3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/gameI/RulesCount1.png" type="Texture" id=13]
[ext_resource path="res://Sprites/gameI/Pause.png" type="Texture" id=14]
[ext_resource path="res://Sprites/gameI/GameBG.png" type="Texture" id=15]
[ext_resource path="res://Sprites/gameI/GameFloor.png" type="Texture" id=16]
[ext_resource path="res://Scripts/GameI/Game2D.gd" type="Script" id=17]
[ext_resource path="res://Sprites/gameI/GameClouds.png" type="Texture" id=18]
[ext_resource path="res://Scripts/GameI/BG.gd" type="Script" id=19]
[ext_resource path="res://Scenes/Bird.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scripts/GameI/Flaps/P4.gd" type="Script" id=21]
[ext_resource path="res://Scripts/GameI/Flaps/P2.gd" type="Script" id=22]
[ext_resource path="res://Scripts/GameI/Flaps/P1.gd" type="Script" id=23]
[ext_resource path="res://Scripts/GameI/Flaps/P3.gd" type="Script" id=24]
[ext_resource path="res://Scripts/GameI/PauseUI.gd" type="Script" id=25]
[ext_resource path="res://Sprites/gameI/butpressed3.png" type="Texture" id=26]
[ext_resource path="res://Sprites/gameI/butpressed4.png" type="Texture" id=27]
[ext_resource path="res://Sprites/gameI/butpressed1.png" type="Texture" id=28]
[ext_resource path="res://Sprites/gameI/butpressed2.png" type="Texture" id=29]
[ext_resource path="res://Themes/myTheme.tres" type="Theme" id=30]
[ext_resource path="res://Scenes/ScoreG1.tscn" type="PackedScene" id=31]
[ext_resource path="res://Fonts/Raw/BigPixelIn.ttf" type="DynamicFontData" id=32]

[sub_resource type="DynamicFont" id=1]
size = 60
extra_spacing_top = 7
extra_spacing_char = 7
extra_spacing_space = -12
font_data = ExtResource( 32 )

[sub_resource type="DynamicFont" id=13]
size = 50
extra_spacing_top = -17
extra_spacing_space = -2
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=14]
size = 60
extra_spacing_top = 20
extra_spacing_bottom = 26
extra_spacing_char = 6
extra_spacing_space = -9
font_data = ExtResource( 32 )

[sub_resource type="DynamicFont" id=12]
size = 100
font_data = ExtResource( 10 )

[sub_resource type="InputEventAction" id=2]
action = "but1"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "but2"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventAction" id=6]
action = "but3"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventAction" id=8]
action = "but4"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventAction" id=10]
action = "butSolo"

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[node name="Game1main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Game2D" type="Node2D" parent="."]
script = ExtResource( 17 )

[node name="BG" type="ParallaxBackground" parent="Game2D"]
script = ExtResource( 19 )

[node name="Base" type="Sprite" parent="Game2D/BG"]
texture = ExtResource( 15 )
offset = Vector2( 800, 288 )

[node name="Sky" type="ParallaxLayer" parent="Game2D/BG"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 1600, 0 )

[node name="Clouds" type="Sprite" parent="Game2D/BG/Sky"]
texture = ExtResource( 18 )
offset = Vector2( 800, 288 )

[node name="Floor" type="ParallaxLayer" parent="Game2D/BG"]
motion_mirroring = Vector2( 1600, 0 )

[node name="Floor" type="Sprite" parent="Game2D/BG/Floor"]
texture = ExtResource( 16 )
offset = Vector2( 800, 288 )

[node name="Birds" type="Node2D" parent="Game2D"]

[node name="P1" parent="Game2D/Birds" instance=ExtResource( 20 )]
visible = false
position = Vector2( 290, 220 )
script = ExtResource( 23 )

[node name="P2" parent="Game2D/Birds" instance=ExtResource( 20 )]
visible = false
position = Vector2( 365, 250 )
script = ExtResource( 22 )

[node name="P3" parent="Game2D/Birds" instance=ExtResource( 20 )]
visible = false
position = Vector2( 440, 170 )
script = ExtResource( 24 )

[node name="P4" parent="Game2D/Birds" instance=ExtResource( 20 )]
visible = false
position = Vector2( 210, 310 )
script = ExtResource( 21 )

[node name="Solo" parent="Game2D/Birds" instance=ExtResource( 20 )]
visible = false
position = Vector2( 290, 220 )

[node name="PlayerButs" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="ScoreG1" parent="PlayerButs" instance=ExtResource( 31 )]
visible = false

[node name="PreStart" type="Control" parent="PlayerButs"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="PreRulesBG" type="TextureRect" parent="PlayerButs/PreStart"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -288.0
margin_right = 800.0
margin_bottom = 288.0
texture = ExtResource( 8 )

[node name="PreRulesText1" type="RichTextLabel" parent="PlayerButs/PreStart"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
custom_colors/default_color = Color( 1, 1, 1, 0.941176 )
custom_colors/font_color_shadow = Color( 0.34902, 0.537255, 0.698039, 1 )
custom_constants/shadow_offset_x = -7
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "     		  
	  PARTY MODE"
text = "     		  
	  PARTY MODE"

[node name="PreRInfo1" type="RichTextLabel" parent="PlayerButs/PreStart/PreRulesText1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
custom_colors/default_color = Color( 1, 1, 1, 0.941176 )
custom_colors/font_color_shadow = Color( 0.34902, 0.537255, 0.698039, 1 )
custom_constants/shadow_offset_x = -4
custom_constants/shadow_offset_y = 2
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "







    	    			  Tap your button to
						  make the bird of the
					    same color flap its wings
				
    		 			Dodge pipes and reach
	  			  further than your friends to win
"
text = "







    	    			  Tap your button to
						  make the bird of the
					    same color flap its wings
				
    		 			Dodge pipes and reach
	  			  further than your friends to win
"

[node name="PreRulesSolo" type="RichTextLabel" parent="PlayerButs/PreStart"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
custom_colors/default_color = Color( 1, 1, 1, 0.941176 )
custom_colors/font_color_shadow = Color( 0.34902, 0.537255, 0.698039, 1 )
custom_constants/shadow_offset_x = -7
custom_constants/shadow_offset_y = 4
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "     
 	  SOLO MODE"
text = "     
 	  SOLO MODE"

[node name="PreRInfoS" type="RichTextLabel" parent="PlayerButs/PreStart/PreRulesSolo"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
custom_colors/default_color = Color( 1, 1, 1, 0.941176 )
custom_colors/font_color_shadow = Color( 0.34902, 0.537255, 0.698039, 1 )
custom_constants/shadow_offset_x = -4
custom_constants/shadow_offset_y = 2
custom_fonts/normal_font = SubResource( 13 )
bbcode_enabled = true
bbcode_text = "







    	    		    Tap the screen to make
	  	    		   the bird  flap its wings
				
    				    Dodge pipes and reach
	      		 	    your highest score
"
text = "







    	    		    Tap the screen to make
	  	    		   the bird  flap its wings
				
    				    Dodge pipes and reach
	      		 	    your highest score
"

[node name="PreRulesText2" type="RichTextLabel" parent="PlayerButs/PreStart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 288.0
margin_right = 512.0
margin_bottom = 864.0
custom_colors/default_color = Color( 1, 1, 1, 0.941176 )
custom_colors/font_color_shadow = Color( 0.34902, 0.537255, 0.698039, 1 )
custom_constants/shadow_offset_x = -9
custom_constants/shadow_offset_y = 5
custom_fonts/normal_font = SubResource( 14 )
bbcode_enabled = true
bbcode_text = "
  [wave]        READY?"
text = "
          READY?"

[node name="HoldButts" type="RichTextLabel" parent="PlayerButs/PreStart/PreRulesText2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/default_color = Color( 1, 1, 1, 0.941176 )
custom_colors/font_color_shadow = Color( 0.34902, 0.537255, 0.698039, 1 )
custom_constants/shadow_offset_x = -6
custom_constants/shadow_offset_y = 3
custom_fonts/normal_font = SubResource( 12 )
bbcode_enabled = true
bbcode_text = "


[wave]        press all together"
text = "


        press all together"

[node name="PreRCount3" type="TextureRect" parent="PlayerButs/PreStart"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 288.0
margin_right = 512.0
margin_bottom = 864.0
texture = ExtResource( 12 )

[node name="PreRCount2" type="TextureRect" parent="PlayerButs/PreStart"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 288.0
margin_right = 512.0
margin_bottom = 864.0
texture = ExtResource( 11 )

[node name="PreRCount1" type="TextureRect" parent="PlayerButs/PreStart"]
modulate = Color( 1, 1, 1, 0.941176 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = 288.0
margin_right = 512.0
margin_bottom = 864.0
texture = ExtResource( 13 )

[node name="PreNext" type="Button" parent="PlayerButs/PreStart"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
flat = true

[node name="butt1" type="TextureButton" parent="PlayerButs"]
pause_mode = 2
show_behind_parent = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 50, 150 )
focus_mode = 0
disabled = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 3 )
texture_normal = ExtResource( 1 )

[node name="but1" type="TouchScreenButton" parent="PlayerButs/butt1"]
pause_mode = 2
normal = ExtResource( 1 )
pressed = ExtResource( 28 )
passby_press = true

[node name="butt2" type="TextureButton" parent="PlayerButs"]
pause_mode = 2
show_behind_parent = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -150.0
margin_right = 50.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 150, 150 )
focus_mode = 0
disabled = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 5 )
texture_normal = ExtResource( 3 )

[node name="but2" type="TouchScreenButton" parent="PlayerButs/butt2"]
pause_mode = 2
normal = ExtResource( 3 )
pressed = ExtResource( 29 )
passby_press = true

[node name="butt3" type="TextureButton" parent="PlayerButs"]
pause_mode = 2
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_top = -50.0
margin_right = 50.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 150, 50 )
focus_mode = 0
disabled = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 7 )
texture_normal = ExtResource( 2 )

[node name="but3" type="TouchScreenButton" parent="PlayerButs/butt3"]
pause_mode = 2
normal = ExtResource( 2 )
pressed = ExtResource( 26 )
passby_press = true

[node name="butt4" type="TextureButton" parent="PlayerButs"]
pause_mode = 2
show_behind_parent = true
margin_left = -50.0
margin_top = -50.0
margin_right = 150.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 50, 50 )
focus_mode = 0
disabled = true
action_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 9 )
texture_normal = ExtResource( 4 )

[node name="but4" type="TouchScreenButton" parent="PlayerButs/butt4"]
pause_mode = 2
normal = ExtResource( 4 )
pressed = ExtResource( 27 )
passby_press = true

[node name="butSolo" type="Button" parent="PlayerButs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
action_mode = 0
shortcut = SubResource( 11 )
flat = true

[node name="Pause" type="TextureButton" parent="PlayerButs"]
pause_mode = 2
show_behind_parent = true
anchor_left = 0.5
anchor_right = 0.5
margin_left = -40.0
margin_right = 40.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
disabled = true
texture_normal = ExtResource( 14 )

[node name="PauseUI" type="Control" parent="PlayerButs"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 512, 37 )
theme = ExtResource( 30 )
script = ExtResource( 25 )

[node name="CenterContainer" type="CenterContainer" parent="PlayerButs/PauseUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerButs/PauseUI/CenterContainer"]
margin_left = 362.0
margin_top = 123.0
margin_right = 662.0
margin_bottom = 452.0
theme = ExtResource( 30 )
alignment = 1

[node name="Resume" type="Button" parent="PlayerButs/PauseUI/CenterContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 107.0
rect_min_size = Vector2( 300, 80 )
rect_pivot_offset = Vector2( 149, 52 )
focus_mode = 0
enabled_focus_mode = 0
text = "Resume"

[node name="Restart" type="Button" parent="PlayerButs/PauseUI/CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 300.0
margin_bottom = 218.0
rect_min_size = Vector2( 300, 80 )
rect_pivot_offset = Vector2( 155, 49 )
focus_mode = 0
enabled_focus_mode = 0
text = "Restart"

[node name="Quit" type="Button" parent="PlayerButs/PauseUI/CenterContainer/VBoxContainer"]
margin_top = 222.0
margin_right = 300.0
margin_bottom = 329.0
rect_min_size = Vector2( 300, 80 )
rect_pivot_offset = Vector2( 158, 51 )
focus_mode = 0
enabled_focus_mode = 0
text = "Quit"

[connection signal="pressed" from="PlayerButs/PreStart/PreNext" to="PlayerButs/PreStart" method="_on_PreNext_pressed"]
[connection signal="button_up" from="PlayerButs/butt1" to="PlayerButs/PreStart" method="_on_but1_released"]
[connection signal="pressed" from="PlayerButs/butt1" to="PlayerButs" method="_on_but1_pressed"]
[connection signal="pressed" from="PlayerButs/butt1/but1" to="PlayerButs" method="_on_but1_pressed"]
[connection signal="released" from="PlayerButs/butt1/but1" to="PlayerButs/PreStart" method="_on_but1_released"]
[connection signal="button_up" from="PlayerButs/butt2" to="PlayerButs/PreStart" method="_on_but2_released"]
[connection signal="pressed" from="PlayerButs/butt2" to="PlayerButs" method="_on_but2_pressed"]
[connection signal="pressed" from="PlayerButs/butt2/but2" to="PlayerButs" method="_on_but2_pressed"]
[connection signal="released" from="PlayerButs/butt2/but2" to="PlayerButs/PreStart" method="_on_but2_released"]
[connection signal="button_up" from="PlayerButs/butt3" to="PlayerButs/PreStart" method="_on_but3_released"]
[connection signal="pressed" from="PlayerButs/butt3" to="PlayerButs" method="_on_but3_pressed"]
[connection signal="pressed" from="PlayerButs/butt3/but3" to="PlayerButs" method="_on_but3_pressed"]
[connection signal="released" from="PlayerButs/butt3/but3" to="PlayerButs/PreStart" method="_on_but3_released"]
[connection signal="button_up" from="PlayerButs/butt4" to="PlayerButs/PreStart" method="_on_but4_released"]
[connection signal="pressed" from="PlayerButs/butt4" to="PlayerButs" method="_on_but4_pressed"]
[connection signal="pressed" from="PlayerButs/butt4/but4" to="PlayerButs" method="_on_but4_pressed"]
[connection signal="released" from="PlayerButs/butt4/but4" to="PlayerButs/PreStart" method="_on_but4_released"]
[connection signal="pressed" from="PlayerButs/butSolo" to="PlayerButs" method="_on_butSolo_pressed"]
[connection signal="pressed" from="PlayerButs/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="PlayerButs/PauseUI/CenterContainer/VBoxContainer/Resume" to="PlayerButs/PauseUI" method="_on_Resume_pressed"]
[connection signal="pressed" from="PlayerButs/PauseUI/CenterContainer/VBoxContainer/Restart" to="PlayerButs/PauseUI" method="_on_Restart_pressed"]
[connection signal="pressed" from="PlayerButs/PauseUI/CenterContainer/VBoxContainer/Quit" to="PlayerButs/PauseUI" method="_on_Quit_pressed"]
